# BarcodeReader3

./: CMakeLists.txt  Main.qml  README.md  frameprocessor.cpp  frameprocessor.h  imageprocessor.cpp  imageprocessor.h  main.cpp
